fix button color contrast

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -35,10 +35,10 @@
     color: black;
     opacity: 0.7;
 }
-.app-header.green-theme .to-dashboard-icon-button,
-.app-header.pink-theme .to-dashboard-icon-button,
-.app-header.black-theme .to-dashboard-icon-button {
-    color: white;
+.app-header.green-theme .icon-buttons svg,
+.app-header.pink-theme .icon-buttons svg,
+.app-header.black-theme .icon-buttons svg {
+    fill: white;
 }
 
 .app-header.green-theme {
